<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.anagramTask.AngramActivity">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_firstString"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:hint="@string/enter_first_string"
        android:padding="@dimen/_8sdp"
        android:textColor="@color/black"
        android:textColorHint="@color/purple_500"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_secondString"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/purple_500"

        android:layout_margin="@dimen/_8sdp"
        android:hint="@string/enter_second_string"
        android:padding="@dimen/_8sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintTop_toBottomOf="@+id/et_firstString" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:gravity="center"

        android:padding="@dimen/_8sdp"
        android:textColor="@color/purple_500"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintTop_toBottomOf="@+id/et_secondString" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        android:text="@string/test"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_result" />

</androidx.constraintlayout.widget.ConstraintLayout>